--- a/CV.tex
+++ b/CV.tex
@@ -1,6 +1,4 @@
-%-------------------------
-% Resume in Latex
-%------------------------
+% Nanda H Krishna's CV
 
 \documentclass[letterpaper,11pt]{article}
 
@@ -14,14 +12,12 @@
 \usepackage[pdftex]{hyperref}
 \usepackage{fancyhdr}
 
-
 \pagestyle{fancy}
-\fancyhf{} % clear all header and footer fields
+\fancyhf{}
 \fancyfoot{}
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
 
-% Adjust margins
 \addtolength{\oddsidemargin}{-0.375in}
 \addtolength{\evensidemargin}{-0.375in}
 \addtolength{\textwidth}{1in}
@@ -34,13 +30,10 @@
 \raggedright
 \setlength{\tabcolsep}{0in}
 
-% Sections formatting
 \titleformat{\section}{
 \vspace{-4pt}\scshape\raggedright\large
 }{}{0em}{}[\color{black}\titlerule \vspace{-5pt}]
 
-%-------------------------
-% Custom commands
 \newcommand{\resumeItem}[2]{
 \item\small{
 \textbf{#1}{: #2 \vspace{-2pt}}
@@ -64,13 +57,8 @@
 \newcommand{\resumeItemListStart}{\begin{itemize}}
 \newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
 
-%-------------------------------------------
-%%%%%%  CV STARTS HERE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
 \begin{document}
 
-%----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
 \textbf{{\Large Nanda H Krishna}}\\
 Chennai
@@ -82,27 +70,21 @@ $\cdot$ \href{github.com/nandahkrishna}{github.com/nandahkrishna}
 $\cdot$ \href{linkedin.com/in/nandahkrishna}{linkedin.com/in/nandahkrishna}
 \end{tabular*}
 
-%-----------SUMMARY-----------------
 \section{About}
-I am an Undergraduate Student of Computer Science and Engineering interested in Machine Learning, Artificial Intelligence and Computer Vision, and research in these fields. I particularly enjoy their applications in interdisciplinary fields.
+I am an Undergraduate Student of Computer Science and Engineering interested in Machine Learning, Computer Vision, Applied CS, and research in these fields.
 
-
-%-----------EDUCATION-----------------
 \section{Education}
 \resumeSubHeadingListStart
 \resumeSubheading
 {Sri Sivasubramaniya Nadar College of Engineering}{Chennai}
-{B.E. Computer Science and Engineering; Affiliated to Anna University; GPA: 9.62 (2 semesters)}{2017 -- 2021}
+{B.E. Computer Science and Engineering; Affiliated to Anna University; GPA: 9.47 (3 semesters)}{2017 -- 2021}
 \resumeSubheading
 {Vidya Mandir Senior Secondary School}{Chennai}
 {High School: Computer Science; Class X 10 CGPA; Class XII 96.6\% (483/500)}{2003 -- 2017}
 \resumeSubHeadingListEnd
 
-
-%-----------EXPERIENCE-----------------
 \section{Experience}
 \resumeSubHeadingListStart
-
 \resumeSubheading
 {Solarillion Foundation}{Chennai}
 {Undergraduate Research Assistant}{Oct. 2018 - Present}
@@ -110,62 +92,66 @@ I am an Undergraduate Student of Computer Science and Engineering interested in 
 \resumeItem{Machine Learning Group}
 {Currently working on movie lifetime prediction based on transactional data from a top multiplex in Chennai. Previously worked on prediction of flight delay times based on historical flight performance data and weather data.}
 \resumeItemListEnd
-
 \resumeSubHeadingListEnd
 
-
-%--------SKILLS------------
 \section{Skills}
-Machine Learning $\cdot$ Image Processing $\cdot$ OpenCV $\cdot$ C $\cdot$ C++ $\cdot$ Python $\cdot$ Java $\cdot$ MATLAB $\cdot$ Web and Android Development $\cdot$ Arduino $\cdot$ Raspberry Pi
+Machine Learning $\cdot$ Image Processing $\cdot$ OpenCV $\cdot$ C $\cdot$ C++ $\cdot$ Python $\cdot$ Java $\cdot$ Shell $\cdot$ MATLAB $\cdot$ Web and Android Development $\cdot$ Arduino $\cdot$ Raspberry Pi
 
-
-%-----------PROJECTS-----------------
 \section{Projects}
 \resumeSubHeadingListStart
 \resumeItem{Movie Lifetime Prediction (Jan. 2019 - Present)}{Working on predicting the lifetime of a movie based on transaction data from a top multiplex in Chennai.}
 \resumeItem{Measurement of Wheel Distances and Angles from Stereo Images (Aug. 2018 - Present)}{An industrial project to measure the distance and angles of tilt of a wheel using images captured by stereo cameras, using OpenCV and C++.}
+\resumeItem{GeoLifeCLEF 2019 (Mar. 2019 - May. 2019)}{Worked on species recommendation using Machine Learning based on location and environmental variables.}
 \resumeItem{Flight Delay Prediction using Machine Learning (Nov. 2018 - Jan. 2019)}{Worked on a machine learning based approach to predict arrival and departure delay of flights based on historical flight performance data and weather data.}
 \resumeItem{WhacAR (Dec. 2018)}{Developed an AR game for Android using Sceneform and ARCore, written in Kotlin. Won the top team award at MLH Local Hack Day 2018.}
 \resumeItem{Pokemon Go on Arduino (Jul. 2018)}{Developed a simple version of Pokemon Go using Arduino and IMU sensor.}
 \resumeItem{brOS - Suite of Applications (Oct. 2016 - Dec. 2016)}{A suite of applications coded in C++, developed for the Class 12 Computer Science Project. Contains 4 applications (Clock, Calendar, Calculator, Notepad) and 4 games, and a customisable UI. Won the Best Project in Computer Science Award.}
 \resumeSubHeadingListEnd
 
+\section{Open Source Contributions}
+\resumeSubHeadingListStart
+\resumeItem{NetworkX}{Created a module for group centrality measures in graphs, fixed documentation errors, helped in maintenance, reviewed pull requests.}
+\resumeItem{Pandas}{Helped in maintenance, removed specific handling for py.path.}
+\resumeItem{DepHell}{Modified command implementations, added tests.}
+\resumeItem{Prefect}{Standardised class repr for all classes, removed inconsistencies.}
+\resumeItem{RxPY}{Improved version maintenance and control using bumpversion.}
+\resumeSubHeadingListEnd
 
-%-----------COURSES-----------------
+\section{Publications}
+\resumeSubHeadingListStart
+\resumeItem{Species Recommendation using Machine Learning - GeoLifeCLEF 2019}{Working notes for GeoLifeCLEF 2019 to be published in CEUR-WS. 2019.}
+\resumeSubHeadingListEnd
+
 \section{Courses}
 \resumeSubHeadingListStart
-\resumeItem{Machine Learning by Stanford University (Coursera)}{Dec. 2018 - Present}
-\resumeItem{Python for Data Science by UC San Diego (edX)}{Oct. 2018 - Dec. 2018}
-\resumeItem{Machine Learning Crash Course by Google AI}{Sep. 2018 - Oct. 2018}
+\resumeItem{Machine Learning}{Stanford University, Coursera}
+\resumeItem{Python for Data Science}{UC San Diego, edX}
+\resumeItem{Machine Learning Crash Course}{Google AI}
 \resumeItem{University Courses}{Python Programming, C Programming, Mathematics - I and II, Discrete Mathematics, Probability and Queuing Theory, Data Structures, Object Oriented Programming, Design and Analysis of Algorithms, Digital Principles and System Design, Computer Architecture, Operating Systems, Database Management Systems}
 \resumeSubHeadingListEnd
 
+\section{Teaching, Talks and Workshops}
+\resumeSubHeadingListStart
+\resumeItem{Computational Thinking Workshop (2018)}{Organized a workshop introducing first year students to various aspects of Computer Science (at SSN).}
+\resumeSubHeadingListEnd
 
-%-----------COURSES-----------------
 \section{Achievements}
 \begin{itemize}[leftmargin=*]
 \item Merit Scholarship for Rank 1 in CSE Department for Semesters 1 \& 2
 \item Top team at MLH Local Hack Day 2018, Chennai
-\item Honorable Mention in ACM ICPC 2017
+\item ACM ICPC: 2017 Online Round Honorable Mention, 2018 KCG Chennai Provincial 5th Place
 \item Award for Consistent Performance in Computer Science in Class 11 \& 12
 \item Award for Best Project in Computer Science in Class 12
 \end{itemize}
 
-
-%-----------MEMBERSHIPS-----------------
 \section{Memberships}
 ACM - Student Member $\cdot$ IEEE - Student Member
 
-%-----------LANGUAGES-----------------
 \section{Languages}
 English $\cdot$ Tamil $\cdot$ Hindi $\cdot$ Sanskrit $\cdot$ Japanese $\cdot$ Korean $\cdot$ German
 
-
-%-----------Hobbies-----------------
 \section{Hobbies}
-Competitive Programming $\cdot$ Quizzing $\cdot$ Languages $\cdot$ Writing and Poetry $\cdot$ Theatre (Acting) $\cdot$ Music
+Competitive Programming $\cdot$ Quizzing $\cdot$ Languages $\cdot$ Writing and Poetry $\cdot$ Theatre (Acting) $\cdot$ Music $\cdot$ Anime $\cdot$ Manga $\cdot$ Asian TV Shows
 
-
-%-------------------------------------------
+\lfoot{Last Updated: 26 May 2019}
 \end{document}
-
