--- a/CV.tex
+++ b/CV.tex
@@ -122,11 +122,13 @@ Machine Learning $\cdot$ Image Processing $\cdot$ OpenCV $\cdot$ C $\cdot$ C++ $
 \resumeItem{Species Recommendation using Machine Learning - GeoLifeCLEF 2019}{Working notes for GeoLifeCLEF 2019 to be published in CEUR-WS. 2019.}
 \resumeSubHeadingListEnd
 
-\section{Courses}
+\section{Courses and Certifications}
 \resumeSubHeadingListStart
 \resumeItem{Machine Learning}{Stanford University, Coursera}
 \resumeItem{Python for Data Science}{UC San Diego, edX}
 \resumeItem{Machine Learning Crash Course}{Google AI}
+\resumeItem{Embedded Software Development}{Workshop at SSN College of Engineering}
+\resumeItem{Blockchain and Hyperledger}{Workshop at SSN College of Engineering}
 \resumeItem{University Courses}{Python Programming, C Programming, Mathematics - I and II, Discrete Mathematics, Probability and Queuing Theory, Data Structures, Object Oriented Programming, Design and Analysis of Algorithms, Digital Principles and System Design, Computer Architecture, Operating Systems, Database Management Systems}
 \resumeSubHeadingListEnd
 
@@ -138,6 +140,7 @@ Machine Learning $\cdot$ Image Processing $\cdot$ OpenCV $\cdot$ C $\cdot$ C++ $
 \section{Achievements}
 \begin{itemize}[leftmargin=*]
 \item Merit Scholarship for Rank 1 in CSE Department for Semesters 1 \& 2
+\item Winner, CodeStorm (Reverse Coding and Competitive Programming), CEG Abacus 2019
 \item Top team at MLH Local Hack Day 2018, Chennai
 \item ACM ICPC: 2017 Online Round Honorable Mention, 2018 KCG Chennai Provincial 5th Place
 \item Award for Consistent Performance in Computer Science in Class 11 \& 12
