--- a/CV.tex
+++ b/CV.tex
@@ -36,7 +36,7 @@
 
 \newcommand{\resumeItem}[2]{
 \item\small{
-\textbf{#1}{: #2 \vspace{-2pt}}
+\textbf{#1}{ #2 \vspace{-2pt}}
 }
 }
 
@@ -60,11 +60,11 @@
 \begin{document}
 
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-\textbf{{\Large Nanda H Krishna}}\\
-Chennai
+\textbf{{\Large Nanda H Krishna}} \\
+Chennai, India
 $\cdot$ +91 9841022137
 $\cdot$ \href{mailto:nanda.harishankar@gmail.com}{nanda.harishankar@gmail.com}
-$\cdot$ \href{mailto:nanda17093@cse.ssn.edu.in}{nanda17093@cse.ssn.edu.in}\\
+$\cdot$ \href{mailto:nanda17093@cse.ssn.edu.in}{nanda17093@cse.ssn.edu.in} \\
 \href{https://nandahkrishna.me}{nandahkrishna.me}
 $\cdot$ \href{github.com/nandahkrishna}{github.com/nandahkrishna}
 $\cdot$ \href{linkedin.com/in/nandahkrishna}{linkedin.com/in/nandahkrishna}
@@ -78,9 +78,15 @@ I am an Undergraduate Student of Computer Science and Engineering interested in 
 \resumeSubheading
 {Sri Sivasubramaniya Nadar College of Engineering}{Chennai}
 {B.E. Computer Science and Engineering; Affiliated to Anna University; GPA: 9.47 (3 semesters)}{2017 -- 2021}
+\resumeItemListStart
+\resumeItem{Activities \& Societies:}{Q! (Quiz Club), Lights Out Please (Theatre Club), English Literary Club, Competitive Programming Club, Google Developer Student Club}
+\resumeItemListEnd
 \resumeSubheading
 {Vidya Mandir Senior Secondary School}{Chennai}
-{High School: Computer Science; Class X 10 CGPA; Class XII 96.6\% (483/500)}{2003 -- 2017}
+{High School: Computer Science; CBSE; Class X 10 CGPA; Class XII 96.6\% (483/500)}{2003 -- 2017}
+\resumeItemListStart
+\resumeItem{Activities \& Societies:}{Math Club, Chemistry Club, Darpan (Magazine) Editorial Team, Quiz, Sanskrit Drama}
+\resumeItemListEnd
 \resumeSubHeadingListEnd
 
 \section{Experience}
@@ -89,63 +95,75 @@ I am an Undergraduate Student of Computer Science and Engineering interested in 
 {Solarillion Foundation}{Chennai}
 {Undergraduate Research Assistant}{Oct. 2018 - Present}
 \resumeItemListStart
-\resumeItem{Machine Learning Group}
-{Currently working on movie lifetime prediction based on transactional data from a top multiplex in Chennai. Previously worked on prediction of flight delay times based on historical flight performance data and weather data.}
+\resumeItem{Machine Learning Group:}
+{Currently working on Movie Lifetime Prediction based on transactional data from a top multiplex in Chennai. Previously worked on Prediction of Flight Delay based on historical flight performance data and weather data.}
 \resumeItemListEnd
 \resumeSubHeadingListEnd
 
 \section{Skills}
-Machine Learning $\cdot$ Image Processing $\cdot$ OpenCV $\cdot$ C $\cdot$ C++ $\cdot$ Python $\cdot$ Java $\cdot$ Shell $\cdot$ MATLAB $\cdot$ Web and Android Development $\cdot$ Arduino $\cdot$ Raspberry Pi
-
-\section{Projects}
 \resumeSubHeadingListStart
-\resumeItem{Movie Lifetime Prediction (Jan. 2019 - Present)}{Working on predicting the lifetime of a movie based on transaction data from a top multiplex in Chennai.}
-\resumeItem{Measurement of Wheel Distances and Angles from Stereo Images (Aug. 2018 - Present)}{An industrial project to measure the distance and angles of tilt of a wheel using images captured by stereo cameras, using OpenCV and C++.}
-\resumeItem{GeoLifeCLEF 2019 (Mar. 2019 - May. 2019)}{Worked on species recommendation using Machine Learning based on location and environmental variables.}
-\resumeItem{Flight Delay Prediction using Machine Learning (Nov. 2018 - Jan. 2019)}{Worked on a machine learning based approach to predict arrival and departure delay of flights based on historical flight performance data and weather data.}
-\resumeItem{WhacAR (Dec. 2018)}{Developed an AR game for Android using Sceneform and ARCore, written in Kotlin. Won the top team award at MLH Local Hack Day 2018.}
-\resumeItem{Pokemon Go on Arduino (Jul. 2018)}{Developed a simple version of Pokemon Go using Arduino and IMU sensor.}
-\resumeItem{brOS - Suite of Applications (Oct. 2016 - Dec. 2016)}{A suite of applications coded in C++, developed for the Class 12 Computer Science Project. Contains 4 applications (Clock, Calendar, Calculator, Notepad) and 4 games, and a customisable UI. Won the Best Project in Computer Science Award.}
-\resumeSubHeadingListEnd
-
-\section{Open Source Contributions}
-\resumeSubHeadingListStart
-\resumeItem{NetworkX}{Created a module for group centrality measures in graphs, fixed documentation errors, helped in maintenance, reviewed pull requests.}
-\resumeItem{Pandas}{Helped in maintenance, removed specific handling for py.path.}
-\resumeItem{DepHell}{Modified command implementations, added tests.}
-\resumeItem{Prefect}{Standardised class repr for all classes, removed inconsistencies.}
-\resumeItem{RxPY}{Improved version maintenance and control using bumpversion.}
+\resumeItem{Machine Learning:}{scikit-learn, Keras, TensorFlow, PyTorch}
+\resumeItem{Image Processing:}{OpenCV, scikit-image}
+\resumeItem{Languages:}{Python, C, C++, Shell, Java, MATLAB, HTML, CSS, SQL}
+\resumeItem{Frameworks:}{Numpy, Pandas, NetworkX, Matplotlib, Git (Version Control)}
+\resumeItem{Hardware:}{Arduino, Raspberry Pi}
 \resumeSubHeadingListEnd
 
 \section{Publications}
 \resumeSubHeadingListStart
-\resumeItem{Species Recommendation using Machine Learning - GeoLifeCLEF 2019}{Working notes for GeoLifeCLEF 2019 to be published in CEUR-WS. 2019.}
+\resumeItem{Species Recommendation using Machine Learning - GeoLifeCLEF 2019:}{Working Notes for GeoLifeCLEF 2019 to be published in CEUR-WS. 2019.}
+\resumeSubHeadingListEnd
+
+\section{Projects and Research}
+\resumeSubHeadingListStart
+\resumeItem{Movie Lifetime Prediction (Jan. 2019 - Present):}{Working on predicting the lifetime of a movie based on transaction data from a top multiplex in Chennai.}
+\resumeItem{Measurement of Wheel Distances and Angles from Stereo Images (Aug. 2018 - Present):}{An industrial project to measure the distance and angles of tilt of a wheel using images captured by stereo cameras, using OpenCV and C++.}
+\resumeItem{GeoLifeCLEF 2019 (Mar. 2019 - May. 2019):}{Worked on species recommendation using Machine Learning based on location and environmental variables.}
+\resumeItem{Flight Delay Prediction using Machine Learning (Nov. 2018 - Jan. 2019):}{Worked on a machine learning based approach to predict arrival and departure delay of flights based on historical flight performance data and weather data.}
+\resumeItem{WhacAR (Dec. 2018):}{Developed an AR game for Android using Sceneform and ARCore, written in Kotlin. Won the top team award at MLH Local Hack Day 2018.}
+\resumeItem{Pokemon Go on Arduino (Jul. 2018):}{Developed a simple version of Pokemon Go using Arduino and IMU sensor.}
+\resumeItem{brOS - Suite of Applications (Oct. 2016 - Dec. 2016):}{A suite of applications coded in C++, developed for the Class 12 Computer Science Project. Contains 4 applications (Clock, Calendar, Calculator, Notepad) and 4 games, and a customisable UI. Won the Best Project in Computer Science Award.}
+\resumeSubHeadingListEnd
+
+\section{Open Source Contributions}
+\resumeSubHeadingListStart
+\resumeItem{NetworkX:}{Created a module for group centrality measures in graphs, fixed documentation errors, helped in maintenance, reviewed pull requests.}
+\resumeItem{Pandas:}{Helped in maintenance, removed specific handling for py.path.}
+\resumeItem{DepHell:}{Modified command implementations, added tests.}
+\resumeItem{Prefect:}{Standardised class repr for all classes, removed inconsistencies.}
+\resumeItem{RxPY:}{Improved version maintenance and control using bumpversion.}
 \resumeSubHeadingListEnd
 
 \section{Courses and Certifications}
 \resumeSubHeadingListStart
-\resumeItem{Machine Learning}{Stanford University, Coursera}
-\resumeItem{Python for Data Science}{UC San Diego, edX}
-\resumeItem{Machine Learning Crash Course}{Google AI}
-\resumeItem{Embedded Software Development}{Workshop at SSN College of Engineering}
-\resumeItem{Blockchain and Hyperledger}{Workshop at SSN College of Engineering}
-\resumeItem{University Courses}{Python Programming, C Programming, Mathematics - I and II, Discrete Mathematics, Probability and Queuing Theory, Data Structures, Object Oriented Programming, Design and Analysis of Algorithms, Digital Principles and System Design, Computer Architecture, Operating Systems, Database Management Systems}
+\resumeItem{Machine Learning:}{Stanford University, Coursera}
+\resumeItem{Python for Data Science:}{UC San Diego, edX}
+\resumeItem{Machine Learning Crash Course:}{Google AI}
+\resumeItem{Linear Algebra:}{MIT 18.02 (OCW)}
+\resumeItem{Embedded Software Development:}{Workshop at SSN College of Engineering}
+\resumeItem{Blockchain and Hyperledger:}{Workshop at SSN College of Engineering}
+\resumeItem{University Courses:}{Python Programming, C Programming, Mathematics - I and II, Discrete Mathematics, Probability and Queuing Theory, Data Structures, Object Oriented Programming, Design and Analysis of Algorithms, Digital Principles and System Design, Computer Architecture, Operating Systems, Database Management Systems}
 \resumeSubHeadingListEnd
 
 \section{Teaching, Talks and Workshops}
 \resumeSubHeadingListStart
-\resumeItem{Computational Thinking Workshop (2018)}{Organized a workshop introducing first year students to various aspects of Computer Science (at SSN).}
+\resumeItem{Computational Thinking Workshop (2018):}{Organized a workshop introducing first year students to various aspects of Computer Science (at SSN).}
 \resumeSubHeadingListEnd
 
 \section{Achievements}
-\begin{itemize}[leftmargin=*]
-\item Merit Scholarship for Rank 1 in CSE Department for Semesters 1 \& 2
-\item Winner, CodeStorm (Reverse Coding and Competitive Programming), CEG Abacus 2019
-\item Top team at MLH Local Hack Day 2018, Chennai
-\item ACM ICPC: 2017 Online Round Honorable Mention, 2018 KCG Chennai Provincial 5th Place
-\item Award for Consistent Performance in Computer Science in Class 11 \& 12
-\item Award for Best Project in Computer Science in Class 12
-\end{itemize}
+\resumeSubHeadingListStart
+\resumeItem{}{Gold Medals and Merit Scholarship for securing Rank 1 in Semesters 1 \& 2}
+\resumeItem{}{Winner, CodeStorm (Reverse Coding and Competitive Programming), CEG Abacus 2019}
+\resumeItem{}{Top team at MLH Local Hack Day 2018, Chennai}
+\resumeItem{}{ACM ICPC: 2017 Online Round Honorable Mention, 2018 KCG Chennai Provincial 5th Place}
+\resumeItem{}{Award for Consistent Performance in Computer Science in Class 11 \& 12}
+\resumeItem{}{Award for Best Project in Computer Science in Class 12}
+\resumeSubHeadingListEnd
+
+\section{Volunteering and Responsibilities}
+\resumeSubHeadingListStart
+\resumeItem{}{Organised Quiz Club events for SSN's Tech Fest and Cultural Fest}
+\resumeSubHeadingListEnd
 
 \section{Memberships}
 ACM - Student Member $\cdot$ IEEE - Student Member
@@ -154,7 +172,8 @@ ACM - Student Member $\cdot$ IEEE - Student Member
 English $\cdot$ Tamil $\cdot$ Hindi $\cdot$ Sanskrit $\cdot$ Japanese $\cdot$ Korean $\cdot$ German
 
 \section{Hobbies}
-Competitive Programming $\cdot$ Quizzing $\cdot$ Languages $\cdot$ Writing and Poetry $\cdot$ Theatre (Acting) $\cdot$ Music $\cdot$ Anime $\cdot$ Manga $\cdot$ Asian TV Shows
+Languages $\cdot$ Poetry $\cdot$ Music $\cdot$ Anime $\cdot$ Manga $\cdot$ Asian TV Shows
 
-\lfoot{Last Updated: 26 May 2019}
+\lfoot{\small Last Updated: 28 May 2019}
+
 \end{document}
